--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Temperature Converter</string>
+    <string name="action_settings">Settings</string>
+    <color name="myColor">#F5F5F5</color>
+    <string name="celsius">to Celsius</string>
+    <string name="fahrenheit">to Fahrenheit</string>
+    <string name="calc">Calculate</string>
+    <string name="editTextHint">Enter a temperature</string>
 </resources>
